# bir

./: .gitignore  AGENTS.md  README.md  pyrightconfig.json
.github/workflows/: ci.yml
apps/server/: README.md  pyproject.toml
apps/server/app/: __init__.py  experiments.py  jsonl.py  main.py  playground.py  redaction.py  schemas.py  storage.py
apps/server/tests/: test_dashboard.py  test_local_mode.py  test_playground.py  test_redaction_parity.py  test_server.py
apps/web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.test.json
apps/web/app/: api-client.test.ts  api-client.ts  experiment-contract.test.ts  experiment-contract.ts  globals.css  layout.tsx  linked-trace-selection.test.ts  linked-trace-selection.ts  page.tsx  playground-contract.test.ts  playground-contract.ts  playground-dataset.test.ts  playground-dataset.ts  playground-history.test.ts  playground-history.ts  trace-browse-request.test.ts  trace-browse-request.ts  trace-contract.fixture.ts  trace-contract.test.ts  trace-contract.ts  trace-filter-commit.test.ts  trace-filter-commit.ts
apps/web/app/components/: experiment-comparison.tsx  experiment-dashboard.tsx  experiment-detail.tsx  experiment-list.tsx  format.ts  labels.ts  playground.tsx  (+5 more)
docs/: IMPLEMENTATION_ROADMAP.md  PARITY_AUDIT.md  README.md
scripts/: dev.sh  server.sh  setup.sh  test-server-local-sdk.sh
tests/product-fixtures/: concurrent-order-experiment-sdk-concurrent.jsonl  concurrent-order-experiment-sdk-concurrent.summary.json  integration-events.jsonl  raise-on-error-experiment-sdk-partial.jsonl  raise-on-error-experiment-sdk-partial.summary.json  sdk-concurrent-experiment-traces.jsonl
(+3 files in other folders)
