[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bir-server"
version = "0.1.0"
description = "Minimal FastAPI ingestion server for Bir traces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    # The server's contract tests exercise the real SDK (configure/observe/
    # service+source metadata). Floor is 0.2.0 — the first release that emits
    # metadata.service and metadata.source — with an upper bound so a future
    # major SDK cannot silently change the contract these tests rely on. CI
    # installs the SDK from source until 0.2.0 is published; see
    # .github/workflows/ci.yml.
    "bir-sdk>=0.2.0,<0.3.0",
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
